--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "url": "git://github.com/prosemirror/prosemirror-gapcursor.git"
   },
   "devDependencies": {
-    "rollup": "^1.26.3",
-    "@rollup/plugin-buble": "^0.20.0"
+    "@rollup/plugin-buble": "^0.20.0",
+    "@types/prosemirror-keymap": "^1.0.3",
+    "@types/prosemirror-state": "^1.2.5",
+    "rollup": "^1.26.3"
   },
   "dependencies": {
     "prosemirror-keymap": "^1.0.0",
